==> UnionChaos/daoluguanli/627/SubMoudle/Lora/SX127X_Hal.c <==
#include <stdint.h>
#include <stdbool.h>
#include "SX127X_Hal.h"
#include "stm32f4xx_hal.h"

void SX127X_DIO0_INPUT()
{
    GPIO_InitTypeDef GPIO_InitStruct;
    GPIO_InitStruct.Pin = GPIO_PIN_3;
    GPIO_InitStruct.Mode = GPIO_MODE_IT_RISING;
    GPIO_InitStruct.Pull = GPIO_PULLDOWN;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
    HAL_GPIO_Init(GPIOF, &GPIO_InitStruct);
    HAL_NVIC_SetPriority(EXTI3_IRQn, 6, 0);
}

void SX127X_DIO0_INTENABLE()
{
    HAL_NVIC_EnableIRQ(EXTI3_IRQn);
}

void SX127X_DIO0_INTDISABLE()
{
    HAL_NVIC_DisableIRQ(EXTI3_IRQn);
}

GPIO_PinState SX127X_DIO0_GetState()
{
    GPIO_PinState State;
    State = HAL_GPIO_ReadPin(GPIOF, GPIO_PIN_3);
    return State;
}

void SX127X_NSS_OUTPUT(GPIO_PinState PinState)
{
    HAL_GPIO_WritePin(GPIOF, GPIO_PIN_6, PinState);
}

void SX127X_RESET_OUTPUT(GPIO_PinState PinState)
{
    GPIO_InitTypeDef GPIO_InitStruct;
    GPIO_InitStruct.Pin = GPIO_PIN_5;
    GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_InitStruct.Pull = GPIO_PULLUP;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
    HAL_GPIO_Init(GPIOF, &GPIO_InitStruct);
    HAL_GPIO_WritePin(GPIOF, GPIO_PIN_5, PinState);
}

void SX127X_SPIGPIO_Init()
{
    GPIO_InitTypeDef GPIO_InitStruct;
    /* Configure the SX126X_NSS pin */
    GPIO_InitStruct.Pin = GPIO_PIN_6;
    GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    GPIO_InitStruct.Speed = GPIO_SPEED_FAST;
    HAL_GPIO_Init(GPIOF, &GPIO_InitStruct);

    /* SPI SCK GPIO pin configuration  */
    GPIO_InitStruct.Pin       = GPIO_PIN_7;
    GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull      = GPIO_PULLUP;
    GPIO_InitStruct.Speed     = GPIO_SPEED_FAST;
    GPIO_InitStruct.Alternate = GPIO_AF5_SPI5;
    HAL_GPIO_Init(GPIOF, &GPIO_InitStruct);

    /* SPI MISO GPIO pin configuration  */
    GPIO_InitStruct.Pin = GPIO_PIN_8;
    GPIO_InitStruct.Alternate = GPIO_AF5_SPI5;
    HAL_GPIO_Init(GPIOF, &GPIO_InitStruct);
    /* SPI MoSi GPIO pin configuration  */
    GPIO_InitStruct.Pin       = GPIO_PIN_9;
    GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull      = GPIO_PULLUP;
    GPIO_InitStruct.Speed     = GPIO_SPEED_FAST;
    GPIO_InitStruct.Alternate = GPIO_AF5_SPI5;
    HAL_GPIO_Init(GPIOF, &GPIO_InitStruct);
}

void SX127X_SPI_Init()
{
    __HAL_RCC_SPI5_CLK_ENABLE();//SPI2时钟使能
    SX127X_SPIGPIO_Init();

    SPI2_InitStruct.Instance = SPI5; //使用SPI5
    SPI2_InitStruct.Init.Mode = SPI_MODE_MASTER;//SPI模式：主机模式
    SPI2_InitStruct.Init.Direction = SPI_DIRECTION_2LINES;//两线全双工
    SPI2_InitStruct.Init.DataSize = SPI_DATASIZE_8BIT;//数据宽度：8位
    SPI2_InitStruct.Init.CLKPolarity = SPI_POLARITY_LOW; //串行同步字时钟控制为低速时钟
    SPI2_InitStruct.Init.CLKPhase = SPI_PHASE_1EDGE;      //CPOL=0;CPHA=0模式
    SPI2_InitStruct.Init.NSS = SPI_NSS_SOFT;//NSSD由软件管理
    SPI2_InitStruct.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_32;//波特率分频，8分频
    SPI2_InitStruct.Init.FirstBit = SPI_FIRSTBIT_MSB;//数据从MSB开始
    SPI2_InitStruct.Init.TIMode = SPI_TIMODE_DISABLE;//SPI Motorola mode
    SPI2_InitStruct.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;//CRC校验不使能
    SPI2_InitStruct.Init.CRCPolynomial = 7;//CRC值计算的多项式
    //SPI2_InitStruct.Init.CRCLength = SPI_CRC_LENGTH_DATASIZE;
    //SPI2_InitStruct.Init.NSSPMode = SPI_NSS_PULSE_DISABLE;

    if (HAL_SPI_Init(&SPI2_InitStruct) != HAL_OK)

    {
        while(1);
    }
    __HAL_SPI_ENABLE(&SPI2_InitStruct);
}

unsigned char SX127X_ReadWriteByte(unsigned char data)
{
    unsigned char RxDat;
    HAL_SPI_TransmitReceive(&SPI2_InitStruct, &data, &RxDat, 1, 1000);
    return RxDat;
}

void SX127X_WriteBuffer( uint8_t addr, uint8_t *buffer, uint8_t size )
{
    uint8_t i;
    SX127X_NSS_OUTPUT(GPIO_PIN_RESET);
    SX127X_ReadWriteByte(addr | 0x80);
    for( i = 0; i < size; i++ )
    {
        SX127X_ReadWriteByte(buffer[i]);
    }
    SX127X_NSS_OUTPUT(GPIO_PIN_SET);
}

void SX127X_ReadBuffer( uint8_t addr, uint8_t *buffer, uint8_t size )
{
    uint8_t i;
    SX127X_NSS_OUTPUT(GPIO_PIN_RESET);
    SX127X_ReadWriteByte(addr & 0x7F);
    for( i = 0; i < size; i++ )
    {
        buffer[i] = SX127X_ReadWriteByte(0x00);
    }

    SX127X_NSS_OUTPUT(GPIO_PIN_SET);
}
